--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Allows Hibernate to generate SQL optimized for PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# App Properties
+phamkv.app.jwtSecret=phamkvSecretKey
+phamkv.app.jwtExpirationMs=600000
