--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # App Properties
 phamkv.app.jwtSecret=phamkvSecretKey
 phamkv.app.jwtExpirationMs=600000
+
+# Static Content
+spring.web.resources.static-locations=classpath:/static/
