Config: Setup Deployment to Fly.io

--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
-# Database Connection
-spring.datasource.url=jdbc:postgresql://projectdiary-db.internal:5432/projectdiary
+# docker run -itd -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=hello -p 5432:5432 --name postgresql postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/diary
 spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=hello
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Show or not log for each sql query
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # App Properties
-phamkv.app.jwtSecret=${JWT_SECRET}
+phamkv.app.jwtSecret=phamkvSecretKey
 phamkv.app.jwtExpirationMs=600000
 
 # Static Content
