--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -3,4 +3,21 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
+
+# Allows Hibernate to generate SQL optimized for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# App Properties
+phamkv.app.jwtSecret=phamkvSecretKey
+phamkv.app.jwtExpirationMs=600000
+
+# Static Content
+spring.web.resources.static-locations=classpath:/static/
