--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,65 +4,71 @@ on:
     branches:
       - main
 jobs:
- #Build's job
+ # Build JAR File using Maven
   build:
-    #Depends on sonar's job
     name: Build
-    #Run on Ubuntu using the latest version
+    # Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+      # Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v1
-      #Set up JDK 17
+      # Set up JDK 17
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-      #Set up Maven cache
+      # Set up Maven cache
       - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
+        # This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v1
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      #Build the application using Maven
+      # Build the application using Maven
       - name: Build with Maven
         run: mvn -B package -DskipTests --file pom.xml
       - name: Upload JAR
-        #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
+        # This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
         uses: actions/upload-artifact@v2
         with:
-          #Set artifact name
+          # Set artifact name
           name: my-app
-          #From this path
+          # From this path
           path: backend/target/*.jar
 
+  # Build and push Docker image
   build-and-push:
     needs: build
     name: Push
+    # Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
+    # Permission for GitHub Actions to push image
     permissions:
       packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      # Download artifact from Build Job
       - name: Download JAR artifact
         uses: actions/download-artifact@v2
         with:
           name: my-app
           #Specify where to store artifact locally
           path: backend/target/
+      # Setup Docker
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      # Login to GHCR
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      # Build using the JAR File artifact
       - name: Build and push Docker image
         id: docker_build
         uses: docker/build-push-action@v2
@@ -74,4 +80,16 @@ jobs:
           build-args: JAR_FILE=/backend/target/*.jar
       - name: Output Image SHA
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+  deploy:
+      name: Deploy app to fly.io
+      # Run on Ubuntu using the latest version
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: superfly/flyctl-actions/setup-flyctl@master
+        - run: flyctl deploy --remote-only
+          # Use secret from repository
+          env:
+            FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
