--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,33 @@ on:
     branches:
       - main
 jobs:
+  # Test
+  tests:
+    name: Unit tests
+    # Run on Ubuntu using the latest version
+    runs-on: ubuntu-latest
+    steps:
+      # Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+      - uses: actions/checkout@v1
+      # Set up JDK 17
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+      # Set up Maven cache
+      - name: Cache Maven packages
+        # This action allows caching dependencies and build outputs to improve workflow execution time.
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      # Run Tests
+      - name: Run Tests
+        run: mvn -B test
  # Build JAR File using Maven
   build:
+    needs: tests
     name: Build
     # Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
