--- a/.github/workflows/pr_main.yaml
+++ b/.github/workflows/pr_main.yaml
@@ -1,7 +1,9 @@
 name: Test if runnable
 on:
+  push:
   pull_request:
-    types: [open, edited]
+    branches:
+      - main
 jobs:
   # Test
   tests:
