Implement Swagger3-UIÂÃ

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -8,16 +8,13 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
-# Allows Hibernate to generate SQL optimized for PostgreSQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.format_sql=true
-
-# App Properties
+# App Properties (only for demonstration purposes, not safe in production)
 phamkv.app.jwtSecret=phamkvSecretKey
 phamkv.app.jwtExpirationMs=600000
+phamkv.openapi.dev-url=http://localhost:8080
 
 # Static Content
 spring.web.resources.static-locations=classpath:/static/
