--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # App Properties
 phamkv.app.jwtSecret=${JWT_SECRET}
 phamkv.app.jwtExpirationMs=600000
+phamkv.openapi.dev-url=http://localhost:8080
 
 # Static Content
 spring.web.resources.static-locations=classpath:/static/
