decrease memory usage

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,5 @@ phamkv.openapi.dev-url=http://localhost:8080
 
 # Static Content
 spring.web.resources.static-locations=classpath:/static/
+
+server.tomcat.max-threads = 2
